<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/app_logo"
        android:src="@drawable/sundayschool_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

        <Button
            android:id="@+id/bt_cadastrar_sala"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_sala"
            android:background="@drawable/bt_estado"
            android:textSize="@dimen/texto_botao"
            android:layout_marginTop="10dp"
            android:layout_below="@id/app_logo"/>

        <Button
            android:id="@+id/bt_relatorio_dominical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_cadastrar_sala"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_estado"
            android:textSize="@dimen/texto_botao"
            android:text="@string/relatorio_dominical"/>

        <Button
            android:id="@+id/bt_sair"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_relatorio_dominical"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_estado"
            android:textSize="@dimen/texto_botao"
            android:text="@string/sair"/>

    </RelativeLayout>

</ScrollView>