<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="sundayschool.deividazevedo.br.sundayschool.CadastraRelatorioActivity">

    <RelativeLayout
        android:id="@+id/rl_cadastra_relatorio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_novo_relatorio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/selecione_sala"/>

        <Spinner
            android:id="@+id/sp_sala"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_novo_relatorio"/>

        <TextView
            android:id="@+id/tv_quantidade_presentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanho_texto"
            android:layout_marginTop="8dp"
            android:text="@string/presentes"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/sp_sala"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_quantidade_visitantes"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/tamanho_texto"
            android:text="@string/visitantes"
            android:layout_below="@+id/sp_sala"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_quantidade_biblias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biblias"
            android:textSize="@dimen/tamanho_texto"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/sp_sala"
            android:layout_alignParentRight="true"/>


        <EditText
            android:id="@+id/et_presentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cor_letra_branca"
            android:padding="@dimen/texto_campo"
            android:maxLength="3"
            android:ems="3"
            android:layout_marginLeft="8dp"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tv_quantidade_presentes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <EditText
            android:id="@+id/et_visitantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cor_letra_branca"
            android:padding="@dimen/texto_campo"
            android:maxLength="3"
            android:ems="3"
            android:gravity="center"
            android:inputType="number"
            android:layout_alignTop="@+id/et_presentes"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/et_biblias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cor_letra_branca"
            android:padding="@dimen/texto_campo"
            android:maxLength="3"
            android:ems="3"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:inputType="number"
            android:layout_alignTop="@+id/et_visitantes"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_adicionar_ao_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:background="@drawable/bt_estado"
        android:layout_below="@+id/rl_cadastra_relatorio"
        android:textSize="@dimen/texto_botao"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false" />

    <Button
        android:id="@+id/bt_finalizar_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_relatorio"
        android:background="@drawable/bt_estado"
        android:layout_below="@+id/rl_cadastra_relatorio"
        android:textSize="@dimen/texto_botao"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
